--- a/gamewindow.ui
+++ b/gamewindow.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>690</width>
+    <width>699</width>
     <height>499</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>690</width>
+    <width>699</width>
     <height>499</height>
    </size>
   </property>
@@ -73,23 +73,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QTableWidget" name="tableWidget">
-       <property name="minimumSize">
-        <size>
-         <width>450</width>
-         <height>450</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>450</width>
-         <height>450</height>
-        </size>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="layoutTableWidget"/>
      </item>
      <item>
       <spacer name="horizontalSpacer_4">
@@ -105,7 +89,7 @@
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+      <layout class="QHBoxLayout" name="layuotSubjectWidget"/>
      </item>
      <item>
       <spacer name="horizontalSpacer_5">
